--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,11 +1,7 @@
 # Upstream changes from _extends are only recognized when modifications are made to this file in the default branch.
 _extends: .github
 repository:
-  name: template
-  description: Template for Terraform Components
+  name: aws-eks-spacelift-worker-pool-controller
+  description: This component provisions the controller part of the [Kubernetes Operator](https://docs
   homepage: https://cloudposse.com/accelerate
   topics: terraform, terraform-component
-
-
-
-
