--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -2,6 +2,6 @@
 _extends: .github
 repository:
   name: aws-eks-spacelift-worker-pool-controller
-  description: This component provisions the controller part of the [Kubernetes Operator](https://docs
+  description: This component provisions the controller part of the Kubernetes Operator for Spacelift Worker Pools into an EKS cluster
   homepage: https://cloudposse.com/accelerate
   topics: terraform, terraform-component
